# app-framework

./: CMakeLists.txt
apps/: CMakeLists.txt  daq_sink_source.cc
include/app-framework/: DAQProcess.hh  DebugLoggingUserModule.hh  QueueRegistry.hh  QueueRegistry.icc
include/app-framework/Queues/: FollyQueue.hh  NamedFollyQueue.hh
src/: CMakeLists.txt  DAQProcess.cc  DebugLoggingUserModule.cc
src/DAQModules/: CMakeLists.txt
unittest/: CMakeLists.txt  FollyQueue_test.cc
unittest/DAQModules/: CMakeLists.txt
